--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
 		<input type="date" id="dob" />
 		<label for="num">Lucky Number:</label>
 		<input type="number" id="num" />
+		<button>Check</button>
+		<script src="app.js"></script>
 	</body>
 </html>
