--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="main.css" />
 		<title>Is your Birthday Lucky?</title>
 	</head>
 	<body>
-		<h1>Is your Birthday Lucky?</h1>
-		<label for="dob">Date of Birth:</label>
-		<input type="date" id="dob" />
-		<label for="num">Lucky Number:</label>
-		<input type="number" id="num" />
-		<button>Check</button>
+		<main>
+			<h1 class="heading">Is your Birthday Lucky? &#129300;</h1>
+			<label for="dob">Date of Birth:</label>
+			<input type="date" id="dob" />
+			<label for="num">Lucky Number:</label>
+			<input type="number" id="num" />
+			<button>Check</button>
+			<p class="output-text"></p>
+		</main>
 		<script src="app.js"></script>
 	</body>
 </html>
