--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 			<input type="number" id="num" />
 			<button>Check</button>
 			<p class="output-text"></p>
+			<p class="helper-text">
+				Enter your birthdate and Lucky number to know if your birthday is lucky or not.
+			</p>
 		</main>
 		<script src="app.js"></script>
 	</body>
