--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 		<title>Is your Birthday Lucky?</title>
 	</head>
 	<body>
+		<div class="initial-render">
+			<div>
+				Enter your birthdate and Lucky number to know if your birthday is lucky or not. &#40;We do
+				not store your data in any form. Click anywhere to continue&#41;
+			</div>
+		</div>
 		<main>
 			<h1 class="heading">Is your Birthday Lucky? &#129300;</h1>
 			<label for="dob">Date of Birth:</label>
